phone and trustpilot

--- a/public/contact-us/index.html
+++ b/public/contact-us/index.html
@@ -158,7 +158,7 @@
                                         <div data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b22a"
                                             class="top-margin _20-pixels">
                                             <div class="side-contact-title">Call Us</div>
-                                            <div class="top-margin"><a href="tel:(877) 747-8062"
+                                            <div class="top-margin"><a href="tel:0522-3148706"
                                                     class="text-link">965-1828-041</a></div>
                                             <div><a href="tel:+916387149303" class="text-link">638-7149-303</a></div>
                                         </div>
@@ -460,8 +460,8 @@
                             </div>
                             <div class="top-margin _20-pixels">
                                 <div class="footer-title">Inquiries</div>
-                                <div class="top-margin"><a href="tel:(877) 747-8062" class="footer-contact-link">(877)
-                                        747-8062</a>
+                                <div class="top-margin"><a href="tel:0522-3148706"
+                                        class="footer-contact-link">0522-3148706</a>
                                     <div><a href="#" class="footer-contact-link">support@digipants.com</a></div>
                                 </div>
                             </div>
