--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
       ],
       "contactPoint": {
         "@type": "ContactPoint",
-        "telephone": "(877) 747-8062",
+        "telephone": "0522-3148706",
         "contactType": "Customer Service",
         "email": "support@digipants.com",
         "contactOption": "TollFree",
@@ -71,6 +71,9 @@
 
         gtag('config', 'G-RGELLSWQWR');
     </script>
+    <!-- TrustBox script -->
+    <script type="text/javascript" src="//widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+    <!-- End TrustBox script -->
 </head>
 
 <body>
@@ -1847,6 +1850,15 @@
                                         <div>Oops! Something went wrong while submitting the form.</div>
                                     </div>
                                 </div>
+                                <!-- TrustBox widget - Review Collector -->
+                                <div class="trustpilot-widget" data-locale="en-US"
+                                    data-template-id="56278e9abfbbba0bdcd568bc"
+                                    data-businessunit-id="67acedf521d7cd3d58ca5f6d" data-style-height="52px"
+                                    data-style-width="100%">
+                                    <a href="https://www.trustpilot.com/review/digipants.com" target="_blank"
+                                        rel="noopener">Trustpilot</a>
+                                </div>
+                                <!-- End TrustBox widget -->
                             </div>
                         </div>
                     </div>
@@ -2215,8 +2227,8 @@
                             </div>
                             <div class="top-margin _20-pixels">
                                 <div class="footer-title">Inquiries</div>
-                                <div class="top-margin"><a href="tel:(877) 747-8062" class="footer-contact-link">(877)
-                                        747-8062</a>
+                                <div class="top-margin"><a href="tel:0522-3148706"
+                                        class="footer-contact-link">0522-3148706</a>
                                     <div><a href="mailto:support@digipants.com"
                                             class="footer-contact-link">support@digipants.com</a></div>
                                 </div>
