--- a/src/works.html
+++ b/src/works.html
@@ -434,8 +434,8 @@
                             </div>
                             <div class="top-margin _20-pixels">
                                 <div class="footer-title">Inquiries</div>
-                                <div class="top-margin"><a href="tel:(877) 747-8062" class="footer-contact-link">(877)
-                                        747-8062</a>
+                                <div class="top-margin"><a href="tel:0522-3148706"
+                                        class="footer-contact-link">0522-3148706</a>
                                     <div><a href="#" class="footer-contact-link">support@digipants.com</a></div>
                                 </div>
                             </div>
