Add language attribute to HTML tag in login page

--- a/public/login-page/index.html
+++ b/public/login-page/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 
-<html data-wf-page="63936f563656319d113c7fb2" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
+<html lang="en" data-wf-page="63936f563656319d113c7fb2" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
 
 <head>
     <style>
