Add title attribute to Budget select field in contact us page

--- a/public/contact-us/index.html
+++ b/public/contact-us/index.html
@@ -258,7 +258,7 @@
                                                     Marketing</span>
                                             </label>
                                         </div>
-                                    </div><select name="Budget" data-name="Budget" id="field"
+                                    </div><select title="Budget" name="Budget" data-name="Budget" id="field"
                                         class="select-field w-select">
                                         <option value="">Budget</option>
                                         <option value="35000 - 75000">35000 - 75000</option>
