Add rel="noopener" attribute to Instagram links for security

--- a/public/contact-us/index.html
+++ b/public/contact-us/index.html
@@ -294,7 +294,7 @@
                         <h2 class="h2 no-margin">Instagram</h2><a data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef5"
                             href="#" class="insta-handle">@DigiPants</a>
                     </div>
-                    <div class="flex-instagram"><a data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef8"
+                    <div class="flex-instagram"><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef8"
                             href="https://www.instagram.com/" target="_blank" class="insta-pic w-inline-block"><img
                                 src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg.webp"
                                 srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg.webp 616w"
@@ -308,7 +308,7 @@
                                     width="40" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eefd" alt=""
                                     class="hover-icon">
                             </div>
-                        </a><a data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eefe" href="https://www.instagram.com/"
+                        </a><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eefe" href="https://www.instagram.com/"
                             target="_blank" class="insta-pic w-inline-block"><img
                                 src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg.webp"
                                 sizes="(max-width: 479px) 45vw, (max-width: 767px) 23vw, (max-width: 1439px) 24vw, 312.5px"
@@ -322,7 +322,7 @@
                                     width="40" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef03" alt=""
                                     class="hover-icon">
                             </div>
-                        </a><a data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef04" href="https://www.instagram.com/"
+                        </a><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef04" href="https://www.instagram.com/"
                             target="_blank" class="insta-pic w-inline-block"><img
                                 src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg.webp"
                                 sizes="(max-width: 479px) 45vw, (max-width: 767px) 23vw, (max-width: 1439px) 24vw, 312.5px"
@@ -336,7 +336,7 @@
                                     width="40" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef09" alt=""
                                     class="hover-icon">
                             </div>
-                        </a><a data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef0a" href="https://www.instagram.com/"
+                        </a><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238ef0a" href="https://www.instagram.com/"
                             target="_blank" class="insta-pic w-inline-block"><img
                                 src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63268aa27de61010a80c7246_Insta_bg.webp"
                                 sizes="(max-width: 479px) 45vw, (max-width: 767px) 23vw, (max-width: 1439px) 24vw, 312.5px"
