--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -454,7 +454,7 @@
                                     <div class="footer-text-medium">GE-1, Vivek Complex, Adjacent to Novelty Cinema,
                                         <br>Lucknow-226024
                                     </div>
-                                    <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
+                                    <div><a rel="noopener" href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
                                 </div>
                             </div>
@@ -467,21 +467,21 @@
                             </div>
                         </div>
                         <div class="footer-social-icons">
-                            <div><a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660b"
+                            <div><a rel="noopener" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660b"
                                     href="https://twitter.com/digipantstweets" target="_blank"
                                     class="social-icon-rounded facebook w-inline-block">
                                     <div class="social-icons-container">
                                         <div class="social-icon-up facebook"></div>
                                         <div class="social-icon-down facebook"></div>
                                     </div>
-                                </a><a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660f"
+                                </a><a rel="noopener" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660f"
                                     href="https://www.facebook.com/digitalpants/" target="_blank"
                                     class="social-icon-rounded twittter w-inline-block">
                                     <div class="social-icons-container">
                                         <div class="social-icon-up twitter"></div>
                                         <div class="social-icon-down twitter"></div>
                                     </div>
-                                </a><a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f6613"
+                                </a><a rel="noopener" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f6613"
                                     href="https://www.instagram.com/digipantsinsta/" target="_blank"
                                     class="social-icon-rounded instagram w-inline-block">
                                     <div class="social-icons-container">
