--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -219,7 +219,7 @@
                                 <div class="divider-line"></div>
                             </div>
                             <div class="form-block w-form">
-                                <form method="post" data-netlify="true" name="wf-form-Contact-Form"
+                                <form method="post" name="Contact-Form"
                                     data-name="Contact Form" data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b25a"
                                     id="email-form" class="contact-form-flex" aria-label="Contact Form">
                                     <div class="flex-space-full no-top-margin"><input type="text" class="field w-input"
@@ -235,24 +235,24 @@
                                     <div class="checkbox-container">
                                         <div class="flex-checkbox">
                                             <label class="w-checkbox checkbox-field">
-                                                <input type="checkbox" name="Checkbox-1" data-name="Checkbox 1"
+                                                <input type="checkbox" name="Services" data-name="Checkbox 1"
                                                     id="checkbox" class="w-checkbox-input checkbox"><span
                                                     for="Checkbox-1" class="checkbox-label w-form-label">Web
                                                     Design</span>
                                             </label>
                                             <label class="w-checkbox checkbox-field">
-                                                <input type="checkbox" name="Checkbox-2" data-name="Checkbox 2"
+                                                <input type="checkbox" name="Services" data-name="Checkbox 2"
                                                     id="checkbox" class="w-checkbox-input checkbox"><span
                                                     for="Checkbox-2" class="checkbox-label w-form-label">Web
                                                     Development</span>
                                             </label>
                                             <label class="w-checkbox checkbox-field">
-                                                <input type="checkbox" name="Checkbox-3" data-name="Checkbox 3"
+                                                <input type="checkbox" name="Services" data-name="Checkbox 3"
                                                     id="checkbox" class="w-checkbox-input checkbox"><span
                                                     for="Checkbox-3" class="checkbox-label w-form-label">SEO</span>
                                             </label>
                                             <label class="w-checkbox checkbox-field">
-                                                <input type="checkbox" name="Checkbox-3" data-name="Checkbox 3"
+                                                <input type="checkbox" name="Services" data-name="Checkbox 3"
                                                     id="checkbox" class="w-checkbox-input checkbox"><span
                                                     for="Checkbox-3" class="checkbox-label w-form-label">Social Media
                                                     Marketing</span>
