--- a/public/service/social-media/index.html
+++ b/public/service/social-media/index.html
@@ -417,8 +417,8 @@
                             <div>
                                 <div class="footer-title">Address</div>
                                 <div class="top-margin">
-                                    <div class="footer-text-medium">GE-1, Vivek Complex, Adjacent to Novelty Cinema,
-                                        <br>Lucknow-226024
+                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
+                                        <br>Lucknow, Uttar Pradesh 226001
                                     </div>
                                     <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
