--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
         }
     </style>
     <meta charset="utf-8">
-    <title>DigiPants - Digital Marketing Agency</title>
+    <title>DigiPants - Innovative Digital Marketing Solutions in Lucknow</title>
     <meta
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
+        content="DigiPants is a Lucknow-based digital marketing agency offering SEO, web development, and social media marketing to help your business grow."
         name="description">
     <meta property="og:title" content="DigiPants - Digital Marketing Agency">
     <meta property="og:description"
@@ -32,7 +32,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/assets/css/style.css" rel="stylesheet" type="text/css">
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-
+    <meta name="robots" content="index, follow">
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
     <script
         type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-    <div class="content">
+    <main class="content">
         <div class="navigation">
             <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease"
                 data-easing2="ease" role="banner" class="navbar w-nav">
@@ -2208,10 +2208,10 @@
                             <div>
                                 <div class="footer-title">Address</div>
                                 <div class="top-margin">
-                                    <div class="footer-text-medium">GE-1, Vivek Complex, Adjacent to Novelty Cinema,
-                                        <br>Lucknow-226024
+                                    <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
+                                        <br>Lucknow, Uttar Pradesh 226001
                                     </div>
-                                    <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
+                                    <div><a rel="noopener" href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
                                 </div>
                             </div>
@@ -2262,7 +2262,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </main>
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=63238e717124a8c9a4c94e41"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
