--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -158,8 +158,7 @@
                                     <div data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b21d" class="side-contact">
                                         <div class="side-contact-title">Address</div>
                                         <div class="top-margin">
-                                            <div class="answer">GE-1, Vivek Complex, Aliganj,<br>Lucknow-226024(U.P.),
-                                                India</div>
+                                            <div class="answer">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj <br/> Lucknow, Uttar Pradesh 226001</div>
                                         </div>
                                         <div class="top-margin"><a href="https://goo.gl/maps/EAVZH4kxVJKuc7SB7"
                                                 target="_blank" class="text-link">View on Maps</a></div>
