--- a/src/index.html
+++ b/src/index.html
@@ -1937,8 +1937,7 @@
                                                         class="bottom-row">
                                                         <div class="sign-up-icon"></div>
                                                         <div>
-                                                            <p class="sign-small-text">GE-1, Vivek Complex, Adjacent to
-                                                                Novelty Cinema,<br>Lucknow-226024</p>
+                                                            <p class="sign-small-text">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj,<br> Lucknow, Uttar Pradesh 226001</p>
                                                         </div>
                                                         <div class="divider-line">
                                                         </div>
@@ -1946,7 +1945,13 @@
                                                     <div class="bottom-row">
                                                         <div class="sign-up-icon phone"></div>
                                                         <div class="sing-top-margin">
-                                                            <p class="sign-small-text">965-1828-041</p>
+                                                            <a href="tel:9651828041"><p class="sign-small-text">965-1828-041</p></a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="bottom-row">
+                                                        <div class="sign-up-icon phone"></div>
+                                                        <div class="sing-top-margin">
+                                                            <a href="tel:7317275160"><p class="sign-small-text">731-7275-160</p></a>
                                                         </div>
                                                     </div>
                                                 </div>
