--- a/src/about-us.html
+++ b/src/about-us.html
@@ -10,9 +10,9 @@
         }
     </style>
     <meta charset="utf-8">
-    <title>DigiPants - Digital Marketing Agency</title>
+    <title>About DigiPants | Trusted Digital Marketing Agency in Lucknow</title>
     <meta
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
+        content="DigiPants—your trusted digital marketing partner focused on turning ideas into impactful strategies for sustainable business success."
         name="description">
     <meta property="og:title" content="DigiPants - Digital Marketing Agency">
     <meta property="og:description"
