--- a/public/services/index.html
+++ b/public/services/index.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 
 
-<html data-wf-page="63936f5636563119b13c7fc0" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
+<html lang="en-US" data-wf-page="63936f5636563119b13c7fc0" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
 
 <head>
-    <style>
-        .wf-force-outline-none[tabindex="-1"]:focus {
-            outline: none;
-        }
-    </style>
     <meta charset="utf-8">
-    <title>DigiPants - Digital Marketing Agency</title>
+    <title>Digital Marketing Services in Lucknow | DigiPants</title>
     <meta
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
+        content="DigiPants' premium services — from custom website design and development to social media marketing and SEO. Empower your brand with expert solutions."
         name="description">
     <meta property="og:title" content="DigiPants - Digital Marketing Agency">
     <meta property="og:description"
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
+        content="DigiPants' premium services — from custom website design and development to social media marketing and SEO. Empower your brand with expert solutions.">
     <meta property="og:image" content="https://www.digipants.com/assets/website.png">
     <meta property="og:image:secure_url" content="https://www.digipants.com/assets/website.png">
     <meta property="og:url" content="https://www.digipants.com">
@@ -56,7 +51,7 @@
             <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease"
                 data-easing2="ease" role="banner" class="navbar w-nav">
                 <div class="content-wrapper-nav w-container"><a href="/" class="brand w-inline-block"><img
-                            src="/assets/logo256x279.ico" loading="lazy" width="50" alt=""></a>
+                            src="/assets/logo256x279.ico" loading="lazy" width="50" alt="digipants"></a>
                     <nav role="navigation" class="nav-menu w-nav-menu"><a href="/about-us"
                             data-w-id="b303d2c1-e854-800f-1d08-b130c8e6ee07" class="navlink w-inline-block">
                             <div>About Us</div>
@@ -93,7 +88,7 @@
             </div>
             <div class="preloader"><img
                     src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/633324953eee0c10a6ff0742_Dual%20Ball-1s-200px.gif"
-                    width="40" height="Auto" alt="" class="preloader-logo">
+                    width="40" height="Auto" alt="digipants" class="preloader-logo">
             </div>
         </div>
         <div id="Top" class="inner-hero-section wf-section">
@@ -128,7 +123,7 @@
             </div><a href="#Intro" class="scroll-down bottom w-inline-block w--current">
                 <div class="scroll-down-box"><img
                         src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63239dd22e1f31ab5addb98c_Scroll.png"
-                        loading="lazy" width="28" alt="" class="scroll-down-arrow"
+                        loading="lazy" width="28" alt="digipants" class="scroll-down-arrow"
                         style="transform: translate3d(0px, 9.8752px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d; will-change: transform;">
                 </div>
             </a>
@@ -144,7 +139,7 @@
                                             src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                             loading="lazy" width="585.5"
                                             srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="">
+                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="digipants">
                                         <div style="background-image:url(&quot;https://www.digipants.com/assets/632622573bb4e8a1d6504d34/632c97774f0a31be911a48a7_firmbee-com-gcsNOsPEXfs-unsplash.jpg&quot;)"
                                             class="change-hover-image"></div>
                                     </a></div>
@@ -165,7 +160,7 @@
                                             src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                             loading="lazy" width="585.5"
                                             srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="">
+                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="digipants">
                                         <div style="background-image:url(&quot;https://www.digipants.com/assets/632622573bb4e8a1d6504d34/632c9c3d5ae0db3ee4e2bf10_jason-goodman-vbxyFxlgpjM-unsplash.jpg&quot;)"
                                             class="change-hover-image"></div>
                                     </a></div>
@@ -188,7 +183,7 @@
                                             src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp"
                                             loading="lazy" width="585.5"
                                             srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2)-p-800.webp 800w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632a8317a64d72b194a94ec8_Bg%20(2).webp 980w"
-                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="">
+                                            sizes="(max-width: 479px) 90vw, (max-width: 1279px) 47vw, 500px" alt="digipants">
                                         <div style="background-image:url(&quot;https://www.digipants.com/assets/632622573bb4e8a1d6504d34/632c9573f5ea2e0f00bf4db5_mailchimp-04X1Yp9hNH8-unsplash.jpg&quot;)"
                                             class="change-hover-image"></div>
                                     </a></div>
@@ -227,7 +222,7 @@
                         <div class="footer-left">
                             <div class="footer-about-left"><a href="/" aria-current="page"
                                     class="footer-branding w-inline-block w--current"><img src="/assets/logo256x279.ico"
-                                        width="105" alt=""></a>
+                                        width="105" alt="digipants"></a>
                                 <div class="top-margin">
                                     <p class="footer-text">At DigiPants we help you define and sharpen your vision and
                                         then help
@@ -339,7 +334,7 @@
                 </div><a href="#Top" class="scroll-down w-inline-block w--current">
                     <div class="scroll-down-box"><img
                             src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/63239dc844cb433c7092cb8d_Scroll_up.png"
-                            loading="lazy" width="28" alt="" class="scroll-down-arrow">
+                            loading="lazy" width="28" alt="digipants" class="scroll-down-arrow">
                     </div>
                 </a>
             </div>
