--- a/src/about-us.html
+++ b/src/about-us.html
@@ -906,17 +906,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="intro-left-column"><img
-                            src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632bd2e55229caaefd705f7d_Bg_2.png"
-                            loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 47vw, 427px" width="427"
-                            srcset="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632bd2e55229caaefd705f7d_Bg_2-p-500.webp 500w, https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632bd2e55229caaefd705f7d_Bg_2.png 854w"
-                            alt="Digipants" class="bg-transparent">
+                    <div class="intro-left-column">
                         <div class="intro-bg-aquacolor">
                             <div data-w-id="569e9f02-1a10-1087-9445-f95b30c8dd1c" class="change-this-image chair"></div>
-                        </div><img
-                            src="https://www.digipants.com/assets/63238e717124a8c9a4c94e41/632bd11a0bc65a3fd9c2ba24_Pin.webp"
-                            loading="lazy" width="110" data-w-id="105fb817-fac7-fe7e-27d9-d21e7f037cb0" alt="Digipants"
-                            class="image">
+                        </div>
                     </div>
                 </div>
             </div>
