--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <meta name="fb_admins_meta_tag" content="digitalpants">
     <meta property="fb:admin" content="digitalpants">
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="google-site-verification" content="aCO75-5PzlX_vlEUYZtpyMPIHYnUbS-1gSe8Fj1qKEY" />
     <meta name="twitter:title" content="DigiPants - Digital Marketing Agency">
     <meta name="twitter:description"
         content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
