--- a/src/contact-us.html
+++ b/src/contact-us.html
@@ -12,11 +12,11 @@
     <meta charset="utf-8">
     <title>DigiPants - Digital Marketing Agency</title>
     <meta
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime."
+        content="Get in touch with DigiPants, a top digital marketing agency in Lucknow. Call, email, or visit us to discuss your project and grow your online presence."
         name="description">
-    <meta property="og:title" content="DigiPants - Digital Marketing Agency">
+    <meta property="og:title" content="Contact DigiPants – Digital Marketing Agency in Lucknow">
     <meta property="og:description"
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
+        content="Get in touch with DigiPants, a top digital marketing agency in Lucknow. Call, email, or visit us to discuss your project and grow your online presence.">
     <meta property="og:image" content="https://www.digipants.com/assets/website.png">
     <meta property="og:image:secure_url" content="https://www.digipants.com/assets/website.png">
     <meta property="og:url" content="https://www.digipants.com">
@@ -27,7 +27,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="DigiPants - Digital Marketing Agency">
     <meta name="twitter:description"
-        content="DigiPants is a full-service digital marketing agency based in Lucknow. In today's digital business world, you need a partner who can help you take advantage of marketing opportunities across a variety of channels in realtime.">
+        content="Get in touch with DigiPants, a top digital marketing agency in Lucknow. Call, email, or visit us to discuss your project and grow your online presence.">
     <meta name="twitter:image" content="https://www.digipants.com/assets/website.png">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/assets/css/style.css" rel="stylesheet" type="text/css">
@@ -144,7 +144,7 @@
                 </div>
             </a>
         </div>
-        <div id="Intro" class="content-section inner-pages-margin wf-section">
+        <main id="Intro" class="content-section inner-pages-margin wf-section">
             <div class="content-wrapper w-container">
                 <div class="inner-wrapper">
                     <div id="Reach-us" class="flex mobile-wrap">
@@ -156,7 +156,7 @@
                                         <div class="top-margin">
                                             <div class="answer">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj <br/> Lucknow, Uttar Pradesh 226001</div>
                                         </div>
-                                        <div class="top-margin"><a href="https://goo.gl/maps/EAVZH4kxVJKuc7SB7"
+                                        <div class="top-margin"><a rel="noopener" href="https://goo.gl/maps/EAVZH4kxVJKuc7SB7"
                                                 target="_blank" class="text-link">View on Maps</a></div>
                                         <div class="divider-line"></div>
                                     </div>
@@ -186,21 +186,21 @@
                                         <div data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b240"
                                             class="top-margin _20-pixels">
                                             <div class="side-contact-title">Follow us</div>
-                                            <div class="top-margin"><a data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b244"
+                                            <div class="top-margin"><a rel="noopener" data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b244"
                                                     href="https://www.facebook.com/digitalpants/" target="_blank"
                                                     class="social-icon-rounded facebook w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up facebook"></div>
                                                         <div class="social-icon-down facebook"></div>
                                                     </div>
-                                                </a><a data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b248"
+                                                </a><a rel="noopener" data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b248"
                                                     href="https://twitter.com/digipantstweets" target="_blank"
                                                     class="social-icon-rounded twittter w-inline-block">
                                                     <div class="social-icons-container">
                                                         <div class="social-icon-up twitter"></div>
                                                         <div class="social-icon-down twitter"></div>
                                                     </div>
-                                                </a><a data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b24c"
+                                                </a><a rel="noopener" data-w-id="d56b0b1a-d760-e329-0b7c-efc562a4b24c"
                                                     href="https://www.instagram.com/digipantsinsta/" target="_blank"
                                                     class="social-icon-rounded instagram w-inline-block">
                                                     <div class="social-icons-container">
@@ -286,12 +286,12 @@
                     </div>
                 </div>
             </div>
-        </div><a href="#Top" data-w-id="b14332a4-73fa-3289-cc4d-f2edc8c4e3d9" class="go-up-button w-inline-block"></a>
+        </main><a href="#Top" data-w-id="b14332a4-73fa-3289-cc4d-f2edc8c4e3d9" class="go-up-button w-inline-block"></a>
         <div class="content-section double wf-section">
             <div class="content-wrapper w-container">
                 <div>
                     <div class="heading-full">
-                        <h2 class="h2 no-margin">Instagram</h2><a data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef5"
+                        <h2 class="h2 no-margin">Instagram</h2><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef5"
                             href="#" class="insta-handle">@DigiPants</a>
                     </div>
                     <div class="flex-instagram"><a rel="noopener" data-w-id="299cbdd2-8b78-3eba-02f5-85c34238eef8"
