--- a/src/service/web-development.html
+++ b/src/service/web-development.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 
-<html data-wf-page="63936f563656312f163c7fb5" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
+<html lang="en" data-wf-page="63936f563656312f163c7fb5" data-wf-site="63238e717124a8c9a4c94e41" class=" w-mod-js w-mod-ix">
 
 <head>
     <style>
@@ -401,7 +401,7 @@
                                     <div class="footer-text-medium">First Floor, Priyadarshini Apartment, 05, Wazir Hasan Road, Block I, Gokhale Vihar, Hazratganj
                                         <br>Lucknow, Uttar Pradesh 226001
                                     </div>
-                                    <div><a href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
+                                    <div><a rel="noopener" href="https://goo.gl/maps/b27AwXFCefedJuZs7" target="_blank"
                                             class="footer-contact-link">View on Maps</a></div>
                                 </div>
                             </div>
@@ -414,21 +414,21 @@
                             </div>
                         </div>
                         <div class="footer-social-icons">
-                            <div><a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660b"
+                            <div><a rel="noopener" title="fb" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660b"
                                     href="https://twitter.com/digipantstweets" target="_blank"
                                     class="social-icon-rounded facebook w-inline-block">
                                     <div class="social-icons-container">
                                         <div class="social-icon-up facebook"></div>
                                         <div class="social-icon-down facebook"></div>
                                     </div>
-                                </a><a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660f"
+                                </a><a rel="noopener" title="X" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f660f"
                                     href="https://www.facebook.com/digitalpants/" target="_blank"
                                     class="social-icon-rounded twittter w-inline-block">
                                     <div class="social-icons-container">
                                         <div class="social-icon-up twitter"></div>
                                         <div class="social-icon-down twitter"></div>
                                     </div>
-                                </a><a data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f6613"
+                                </a><a rel="noopener" title="instagram" data-w-id="8b02b3b6-1f8e-ec53-f995-c7ae198f6613"
                                     href="https://www.instagram.com/digipantsinsta/" target="_blank"
                                     class="social-icon-rounded instagram w-inline-block">
                                     <div class="social-icons-container">
