--- a/src/about-us.html
+++ b/src/about-us.html
@@ -223,7 +223,7 @@
                             <p class="text-aqua">We're the experts who create best digital marketing roadmap to achieve
                                 the best.</p>
                         </div>
-                        <div class="button-box center"><a href="#Numbers" class="button-outline aqua w-inline-block">
+                        <div class="button-box center"><a href="#Next" class="button-outline aqua w-inline-block">
                                 <div class="text-on-button">Learn More</div>
                             </a></div>
                     </div>
